--- a/app/src/main/res/layout/activity_appliances.xml
+++ b/app/src/main/res/layout/activity_appliances.xml
@@ -9,11 +9,12 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/appliancesicon" />
 
@@ -21,93 +22,76 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="20dp"
         android:text="Appliances"
         android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Spinner
         android:id="@+id/spinner_room"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="470dp"
         android:entries="@array/room_appliance"
         android:spinnerMode="dropdown"
         android:textSize="65dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Spinner
         android:id="@+id/spinner_kitchen_app"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
         android:entries="@array/kitchen_appliances"
         android:textSize="65dp"
         android:textStyle="bold"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_room" />
 
     <Spinner
         android:id="@+id/spinner_bathroom_app"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
         android:entries="@array/bathroom_appliances"
         android:textSize="65dp"
         android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_room" />
 
     <Spinner
         android:id="@+id/spinner_bedroom_app"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
         android:entries="@array/bedroom_appliances"
         android:textSize="65dp"
         android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_room" />
 
     <EditText
         android:id="@+id/details"
-        android:layout_width="400dp"
+        android:layout_width="0dp"
         android:layout_height="300dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="117dp"
-        android:layout_marginTop="20dp"
         android:background="@android:drawable/alert_light_frame"
         android:hint="Please provide additional details here. (optional)"
-        android:visibility="visible"
         android:maxLength="300"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/submit"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_kitchen_app" />
 
@@ -115,7 +99,7 @@
         android:id="@+id/submit"
         android:layout_width="159dp"
         android:layout_height="39dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
