--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -11,12 +11,12 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-2dp" />
+        tools:layout_editor_absoluteY="0dp" />
 
     <Button
         android:id="@+id/logout"
         android:layout_width="64dp"
-        android:layout_height="41dp"
+        android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
@@ -263,14 +263,26 @@
         app:layout_constraintTop_toBottomOf="@+id/pestControl" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/settingB"
         android:layout_width="75dp"
-        android:layout_height="41dp"
+        android:layout_height="40dp"
         android:layout_marginStart="252dp"
         android:layout_marginLeft="252dp"
         android:layout_marginTop="8dp"
         android:text="Settings"
         android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="67dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="back"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
