--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -136,7 +136,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Password (atleast 6 characters)"
         android:inputType="textPersonName"
         android:paddingTop="2dp"
         android:textSize="14sp"
