--- a/app/src/main/res/layout/activity_vendor_login.xml
+++ b/app/src/main/res/layout/activity_vendor_login.xml
@@ -7,7 +7,7 @@
     tools:context=".vendorLogin">
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/passwordv"
         android:layout_width="345dp"
         android:layout_height="45dp"
         android:layout_marginStart="32dp"
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="0.514" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/loginV"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="100dp"
@@ -37,10 +37,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordv" />
 
     <Button
-        android:id="@+id/signup"
+        android:id="@+id/signupV"
         android:layout_width="211dp"
         android:layout_height="45dp"
         android:layout_marginBottom="140dp"
@@ -72,11 +72,12 @@
         app:srcCompat="@drawable/logolight" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/emailv"
         android:layout_width="345dp"
         android:layout_height="45dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
+        android:layout_marginTop="112dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:ems="10"
@@ -84,7 +85,7 @@
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.463"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.894" />
