--- a/app/src/main/res/layout/activity_vendor_register.xml
+++ b/app/src/main/res/layout/activity_vendor_register.xml
@@ -129,7 +129,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="12dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Password (atleast 6 characters)"
         android:inputType="textPassword"
         android:paddingTop="2dp"
         android:textSize="14sp"
